<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JPDroid</string>
    <string name="action_settings">Settings</string>
    <string name="ac_paste">Paste</string>
    <string name="ac_translate">Translate</string>
    <string name="ac_clear">Clear</string>
    <string name="ac_save">Save to file</string>
    <string name="ac_sel_search">Search</string>
    <string name="ac_sel_translate">Translate</string>
    <string name="ac_cut">Cut</string>
    <string name="ac_copy">Copy</string>
    <string name="ac_select_all">Select all</string>
    <string name="ac_exit">Exit</string>
    <string name="msg_clipboard_empty">Clipboard is empty</string>
    <string name="msg_clipboard_incompat">Clipboard contains incompatible data</string>

    <string name="tx_sample">Paste text here from browser or text editor.</string>

</resources>
